Tests/Lexer_Parser_Tests/Fails/Arrays_Flavor.bbgm
# Fail due to invalid flavor type used inside array
recipe: HelloWorld() sugar {
    [sugar, flavor, Cow] a :: nflv
}
